# Acerba

./: .gitignore  CHANGELOG.md  CMakeLists.txt  Doxyfile  LICENSE.md  README.md  SOURCES  vs2015_movelibs_fix.txt
android_project/jni/: Application.mk
android_project/jni/acerba/: Android.mk  README.md
android_project/jni/src/: Android.mk  main.cpp
android_project/src/org/libsdl/app/: SDLActivity.java
android_template/: AndroidManifest.xml  README.md  build.gradle
android_template/acerba/: Application.mk
android_template/acerba/PreAL/: Android.mk
android_template/acerba/PreAcerba/: Android.mk
android_template/acerba/PreMain/: Android.mk
android_template/acerba/PreOALWrapper/: Android.mk
android_template/acerba/PreSDL/: Android.mk
android_template/acerba/hook/: Android.mk  hook.cpp
android_template/res/values/: strings.xml
android_template/src/acerba/demo/: DemoActivity.java
android_template/src/org/libsdl/app/: SDLActivity.java
assets/: Standard.frag  Standard.vert
cmake/: ProjectBuild.cmake
cmake/Toolchains/: android.toolchain.cmake
docs/: CodeExample.cpp  Style.md  UML.plant  mainpage.md
example/: AudioExample.cpp  EntityUpdateExample.cpp  GraphicsExample.cpp  Pong_Demo.cpp  ResourcesExample.cpp  SceneDemo.cpp  SceneDrawingMultipleExample.cpp  UserInterfaceExample.cpp  fragment.frag  main.cpp  vertex.vert
example/Demos/: AnimationExample.cpp  AudioExample.cpp  CollisionBVHExample.cpp  CollisionExample.cpp  CollisionExampleEntity.cpp  EntityUpdateExample.cpp  GraphicsDeviceExample.cpp  IOExample.cpp  InputExample.cpp  JsonExample.cpp  MouseDebugExample.cpp  PongDemoNoEntity.cpp  Pong_Demo.cpp  Pong_Demo_NoEntity.cpp  ResourcesExample.cpp  SceneDrawingExample.cpp  SceneDrawingMultipleExample.cpp  SpritesheetExample.cpp  TilemapExample.cpp  UserInterfaceExample.cpp
example/Demos/IOExampleFiles/: ReadTestTextFile.txt
include/Ace/: AABB.h  Accelerometer.h  Ace.h  Animation.h  Assert.h  Audio.h  BVH.h  BaseApplication.h  BaseComponent.h  Buffer.h  Camera.h  Collidable.h  Collidable2D.h  CollidableImpl.h  CollisionData.h  Color.h  Component.h  ComponentHandle.h  ComponentPool.h  Debugger.h  Drawable.h  Entity.h  EntityHandle.h  EntityManager.h  Event.h  EventManager.h  Events.h  File.h  Font.h  Framebuffer.h  GL.h  GLBufferImpl.h  GLFramebbuferImpl.h  GLMaterialImpl.h  GLShaderImpl.h  GLTextureImpl.h  GraphicsDevice.h  GraphicsObject.h  Image.h  IntTypes.h  (+48 more)
src/Ace/: AABB.cpp  Accelerometer.cpp  Animation.cpp  Audio.cpp  BVH.cpp  BaseApplication.cpp  BaseComponent.cpp  Buffer.cpp  Camera.cpp  Collidable.cpp  Collidable2D.cpp  CollidableImpl.cpp  Debugger.cpp  Drawable.cpp  Entity.cpp  EntityHandle.cpp  EntityManager.cpp  Event.cpp  File.cpp  Font.cpp  Framebuffer.cpp  GLGraphicsDevice.cpp  GraphicsObject.cpp  Image.cpp  Json.cpp  Keyboard.cpp  Log.cpp  Material.cpp  Math.cpp  Matrix2.cpp  Matrix3.cpp  Matrix4.cpp  Module.cpp  Mouse.cpp  Particle.cpp  ParticleSystem.cpp  Path.cpp  Quaternion.cpp  Raycast.cpp  Rect.cpp  (+16 more)
